# multiplayer-physics-engine

./: .gitignore  CMakeLists.txt  README.md  server_initial.json
client/: CMakeLists.txt  client.cpp  client.hpp  client_network.cpp  client_network.hpp  main.cpp  render.cpp  render.hpp
clientdata/: conf.json
common/: CMakeLists.txt  cache.cpp  cache.hpp  controls.hpp  physics.cpp  physics.hpp  processing_player_events.cpp.backup  scene.cpp  scene.hpp  scene_objects.cpp  scene_objects.hpp
res/maps/: first.json  second.json
res/objects/: andromalius.json  disciple.json  marble_ground.json  wooden_crate.json
server/: CMakeLists.txt  main.cpp  scene_management.cpp  scene_management.hpp  server.cpp  server.hpp
serverdata/: conf.json  player_ids.json
serverdata/players/: constragon.json  id_constragon.json  id_thalinon.json  thalinon.json
